feat: Adicionando endpoint para captura de Tag por código
